<resources>
    <string name="app_name">InJapanApp</string>
    <string name="app_error_dismiss" translatable="false">OK</string>
    <string name="app_navigation_drawer_open">Open navigation drawer</string>
    <string name="app_navigation_drawer_close">Close navigation drawer</string>


    <string name="price">Price:</string>
    <string name="shelf_number">Shelf Number:</string>
    <string name="task_type">Task type:</string>
    <string name="enter_r_or_s_number">Enter R- or S- number</string>
    <string name="task_number">Task Number</string>
    <string name="description">Description</string>
    <string name="create_task">Create Task</string>
    <string name="r">R-</string>
    <string name="detail_number">detail number</string>
    <string name="choose_task_type">choose task type</string>
    <string name="choose_price">choose price</string>
    <string name="enter_shelf_number">enter shelf number</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="time_passed">Time passed:</string>
    <string name="what_to_do">What to do:</string>
    <string name="check">Check</string>
    <string name="separate_and_trash">Separate And Trash</string>
    <string name="trash">Trash</string>
    <string name="photo">Photo</string>
    <string name="separate">Separate</string>
    <string name="test">Test</string>
    <string name="show_all_tasks">Show All Tasks</string>
    <string name="history">History</string>
    <string name="done_and_payed">Done and Paid</string>
    <string name="task_done">Task Done</string>
    <string name="got_money">Paid</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="not_saved">Image not saved!</string>
    <string name="error">Error finding image</string>
    <string name="timer_prefix">You accomplished this task in</string>
    <string name="start_stop_timer">Start(stop) timer?</string>
    <string name="payment_received">Payment received?</string>
    <string name="close_the_task">Close the Task?</string>
    <string name="task_accomplished">Task Accomplished?</string>
    <string name="edit_description">Edit description?</string>
    <string name="enter_description">Enter Description</string>
    <string name="delete_task">Delete This Task?</string>
    <string name="task_num_hint">Enter task number</string>
    <string name="permission_denied">Permission denied</string>
    <string name="replace_task">Update existing task?</string>
    <string name="abort_task_creation">Abort task creation?</string>
    <string name="horyu">保留リスト</string>
    <string name="task_priority">Task Priority:</string>
    <string name="set_priority">Set priority</string>
    <string name="normal">NORMAL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="filter_by_type">Choose filter for task type</string>
    <string name="filter_type">Filter type</string>
    <string name="action_settings">settings</string>
    <string name="sorting">Sorting</string>
    <string name="sort_by">Sort by</string>
    <string name="none">none</string>
    <string name="filter_by">Filter by:</string>
    <string name="all">all</string>
    <string name="no_tasks">No active tasks</string>
</resources>
