<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            android:entries="@array/tasks_pref"
            android:entryValues="@array/tasks_pref"
            android:key="open_only_this"
            android:persistent="true"
            android:defaultValue="@string/show_all_tasks"
            android:title="@string/filter_type"
            android:summary="@string/filter_by_type"/>

    <ListPreference
            android:entries="@array/filter"
            android:entryValues="@array/filter"
            android:key="sort_key"
            android:persistent="true"
            android:defaultValue="none"
            android:title="@string/sorting"
            android:summary="@string/sort_by"/>

</PreferenceScreen>