<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
            android:id="@+id/group_1"
            android:checkableBehavior="single">
        <item
                android:id="@+id/showAll"
                android:title="@string/show_all_tasks"
                app:showAsAction="withText"/>

        <item
                android:id="@+id/test"
                android:title="@string/test"
                app:showAsAction="withText"/>

        <item
                android:id="@+id/separate"
                android:title="@string/separate"
                app:showAsAction="withText"/>
        <item
                android:id="@+id/photo"
                android:title="@string/photo"
                app:showAsAction="withText"/>

        <item
                android:id="@+id/trash"
                android:title="@string/trash"
                app:showAsAction="withText"/>

        <item
                android:id="@+id/separate_and_trash"
                android:title="@string/separate_and_trash"
                app:showAsAction="withText"/>

        <item
                android:id="@+id/check"
                android:title="@string/check"
                app:showAsAction="withText"/>
    </group>

    <!--<group
        android:id="@+id/group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out"
            app:showAsAction="withText" />
    </group>-->

</menu>
